[package]
name = "composable-indexes"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = "0.2.19"
paste = "1.0.15"
proptest = { version = "1.6.0", optional = true }
seq-macro = "0.3.6"

[features]
test-utils = ["dep:proptest"]

[dev-dependencies]
composable-indexes = { path = ".", features = ["test-utils"] }
