[package]
name = "composable-indexes-bench"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/utdemir/composable-indexes"

[[bench]]
name = "insertion_vs_hashmap"
harness = false

[[bench]]
name = "query_vs_sqlite"
harness = false

[dependencies]
composable-indexes = { version = "0.1.0", path = "../composable-indexes" }
criterion = "0.5.1"
sqlite = "0.37.0"
