[package]
name = "composable-indexes-derive"
version = "0.4.0"
edition = "2021"
description = "Derive macros for composable-indexes"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
composable-indexes-core = { version = "0.4.0", path = "../composable-indexes-core" }

[dev-dependencies]
composable-indexes = { path = "../composable-indexes" }
