[package]
name = "composable-indexes-derive"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
description = "Derive macros for composable-indexes"
repository = "https://github.com/utdemir/composable-indexes"

[lints]
workspace = true

[lib]
proc-macro = true
bench = false

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
composable-indexes = { path = "../composable-indexes", features = ["imbl"] }
