[package]
name = "composable-indexes-props"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Property testing support for composable-indexes"
repository = "https://github.com/utdemir/composable-indexes"

[dependencies]
composable-indexes-core = { version = "0.1.1", path = "../composable-indexes-core" }
proptest = { version = "1.6.0" }

[dev-dependencies]
proptest = { version = "1.6.0", features = ["attr-macro"] }
proptest-derive = "0.5.1"
