[package]
name = "composable-indexes-testutils"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
description = "Utilities for testing indexes for composable-indexes"
repository = "https://github.com/utdemir/composable-indexes"

[dependencies]
composable-indexes-core = { version = "0.5.0", path = "../composable-indexes-core" }
pretty_assertions = "1.4.1"
proptest = { version = "1.6.0" }

[dev-dependencies]
proptest = { version = "1.6.0", features = ["attr-macro"] }
proptest-derive = "0.5.1"
