[package]
name = "composable-indexes"
version = "0.5.0"
license = "Apache-2.0"
edition = "2024"
description = "In-memory collections with composable indexes"
repository = "https://github.com/utdemir/composable-indexes"
readme = "../../README.md"

[dependencies]
composable-indexes-derive = { version = "0.5.0", path = "../composable-indexes-derive" }
num-traits = "0.2.19"
paste = "1.0.15"
seq-macro = "0.3.6"
hashbrown = { version = "0.16.1", optional = true }

# testutils
pretty_assertions = { version = "1.4.1", optional = true }
proptest = { version = "1.6.0", optional = true }

[features]
default = []
testutils = ["dep:pretty_assertions", "dep:proptest"]
nostd = ["dep:hashbrown"]

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5"
divan = "0.1.21"
sqlite = "0.37.0"
composable-indexes = { path = ".", default-features = false, features = ["testutils"] }

[[bench]]
name = "insertion_vs_hashmap"
harness = false

[[bench]]
name = "query_vs_sqlite"
harness = false

