[package]
name = "composable-indexes"
version = "0.6.3"
license = "Apache-2.0"
edition = "2024"
description = "In-memory collections with composable indexes"
repository = "https://github.com/utdemir/composable-indexes"
readme = "../../README.md"
keywords = ["no_std", "data-structures"]

[dependencies]
composable-indexes-derive = { path = "../composable-indexes-derive", version = "0.6.3", optional = true }
num-traits = "0.2.19"
paste = "1.0.15"
seq-macro = "0.3.6"
hashbrown = { version = "0.16.1" }
pretty_assertions = { version = "1.4.1", optional = true }
proptest = { version = "1.6.0", optional = true }

[features]
default = ["std", "derive"]
std = []
testutils = ["dep:pretty_assertions", "dep:proptest"]
derive = ["dep:composable-indexes-derive"]

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5"
divan = "0.1.21"
sqlite = "0.37.0"
composable-indexes = { path = ".", default-features = false, features = ["testutils"] }

[[bench]]
name = "insertion_vs_hashmap"
harness = false
required-features = ["std"]

[[bench]]
name = "query_vs_sqlite"
harness = false
required-features = ["std"]

[[example]]
name = "derive"
required-features = ["std", "derive"]

[[example]]
name = "session"
required-features = ["std", "derive"]

[[example]]
name = "graph"
required-features = ["std", "derive"]
