[package]
name = "composable-indexes"
version = "0.7.0"
license = "Apache-2.0"
edition = "2024"
description = "In-memory collections with composable indexes"
repository = "https://github.com/utdemir/composable-indexes"
readme = "../../README.md"
keywords = ["no_std", "data-structures"]

[dependencies]
composable-indexes-derive = { path = "../composable-indexes-derive", version = "0.7.0", optional = true }
num-traits = "0.2.19"
paste = "1.0.15"
seq-macro = "0.3.6"
hashbrown = { version = "0.16.1" }
pretty_assertions = { version = "1.4.1", optional = true }
proptest = { version = "1.6.0", optional = true }
imbl = { version = "6.1.0", optional = true }
roaring = { version = "0.10.2", optional = true }

[features]
default = ["std", "derive"]
std = []
testutils = ["dep:pretty_assertions", "dep:proptest"]
derive = ["dep:composable-indexes-derive"]
imbl = ["dep:imbl"]
roaring = ["dep:roaring"]

[package.metadata.docs.rs]
features = ["testutils", "imbl", "roaring"]

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5"
divan = "0.1.21"
criterion = { version = "0.5", features = ["html_reports"] }
composable-indexes = { path = ".", default-features = false, features = ["testutils"] }

[lib]
bench = false

[[bench]]
name = "indexes"
harness = false
required-features = ["std", "imbl"]

[[bench]]
name = "build"
harness = false
required-features = ["std"]

[[example]]
name = "session"
required-features = ["std", "derive"]

[[example]]
name = "session_im"
required-features = ["std", "imbl", "derive"]

[[example]]
name = "session_noderive"
required-features = ["std", "imbl"]

[[example]]
name = "graph"
required-features = ["std", "derive"]
